Off-canvas menu

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,8 +16,9 @@
   <% } %>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8"/>
-  <title>React QonQer Webshop</title>
+  <title>React QicQ Webshop</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation-prototype.css">
   <script src="https://use.fontawesome.com/85439eeb40.js"></script>
 </head>
