--- a/src/style/_footer.sass
+++ b/src/style/_footer.sass
@@ -1,12 +1,35 @@
 .footer
   background-color: $qicq-dark-gray
-  padding: ($default-margin * 2) 0
+  padding: $more 0
+  @media #{$medium}
+    padding: $double 0
+
+.footer__list
+  margin-bottom: $half
+  @media #{$medium}
+    margin-bottom: 0
+  li
+    text-align: center
+    @media #{$medium}
+      text-align: left
 
 .footer__list--social
-  margin-top: $default-margin / 2
+  text-align: center
+  @media #{$medium}
+    text-align: left
+  ul
+    display: inline-block
+    margin-top: $less
+    @media #{$medium}
+      display: block
+      margin-top: $half
   li
     display: inline-block
     width: 60px
+    @media #{$medium}
+      width: 50px
+    @media #{$large}
+      width: 60px
 
 .footer__link
   font-family: $body-ff
