--- a/src/style/_order-steps.sass
+++ b/src/style/_order-steps.sass
@@ -1,9 +1,9 @@
 .order-step__header
-  width: 91.66667%
+  // width: 91.66667%
   color: $blue
   font-size: $h3
   line-height: 1
-  margin-bottom: $default-margin * 2
+  margin-bottom: $default-margin * 1.5
   padding-bottom: $default-margin
   border-bottom: 1px solid lighten($blue, 40%)
 
@@ -12,7 +12,7 @@
   margin-right: .25em
 
 .order-step__button
-  margin-top: $default-margin / 2
+  margin-top: $default-margin
   margin-bottom: $default-margin * 2
   .fa
     font-size: 0.8em
