--- a/src/style/_product.sass
+++ b/src/style/_product.sass
@@ -1,20 +1,39 @@
 .product__summary,
 .product__price,
 .product__options
-  margin-bottom: $default-margin
+  margin-bottom: $default
+
+.product__summary
+  font-size: $h7
+  @media #{$medium}
+    font-size: $h6
 
 .product__visual
-  // display: none
-  height: 312px
-  img
-    max-height: 100%
+  border: 1px solid $gray-300
+  margin-bottom: $default
+  @media #{$medium}
+    height: 312px
+    img
+      max-height: 100%
 
 .product__price
   font-family: $nav-ff
-  // font-weight: bold
   font-size: $h3
   line-height: 0.7
   color: $qicq-dark-gray
+
+.button--frame-size
+  .main
+    font-size: $h6
+    @media #{$medium}
+      font-size: $h5
+  .sub
+    font-family: $subnav-ff
+    display: block
+    margin-top: $half
+    font-size: $h8
+    @media #{$medium}
+      font-size: $h7
 
 .product__checkbox
   margin-bottom: 0
