--- a/src/style/_font-awesome.sass
+++ b/src/style/_font-awesome.sass
@@ -12,3 +12,19 @@ $fa-facebook-official: '\f230'
 $fa-facebook-square: '\f082'
 $fa-linkedin: '\f0e1'
 $fa-linkedin-square: '\f08c'
+$fa-window-close: '\f2d3'
+$fa-window-close-o: '\f2d4'
+$fa-times: '\f00d'
+$fa-times-circle: '\f057'
+$fa-minus: '\f068'
+$fa-minus-circle: '\f056'
+$fa-minus-square: '\f146'
+$fa-minus-square-o: '\f14'
+$fa-chevron-circle-down: '\f13a'
+$fa-chevron-circle-left: '\f137'
+$fa-chevron-circle-right: '\f138'
+$fa-chevron-circle-up: '\f139'
+$fa-chevron-down: '\f078'
+$fa-chevron-left: '\f053'
+$fa-chevron-right: '\f054'
+$fa-chevron-up: '\f077'
