--- a/src/style/_footer.sass
+++ b/src/style/_footer.sass
@@ -1,7 +1,7 @@
 .footer
   background-color: $qicq-dark-gray
   padding: $more 0
-  @media #{$medium}
+  @media #{$large}
     padding: $double 0
 
 .footer__list
@@ -33,7 +33,7 @@
 
 .footer__link
   font-family: $body-ff
-  font-size: $h7
+  font-size: $h8
   line-height: 1
   letter-spacing: $body-ls
   color: $qicq-light-gray
