--- a/src/style/_grid-variables.sass
+++ b/src/style/_grid-variables.sass
@@ -44,5 +44,9 @@ $desktop-wide-container: 1164px
 $medium-min: 640px
 $large-min: 1024px
 
+$small-max: ($medium-min - 1)
+
 $medium: "(min-width:#{$medium-min})"
 $large: "(min-width:#{$large-min})"
+
+$small-only: "(max-width:#{$small-max})"
