--- a/src/style/_overview.sass
+++ b/src/style/_overview.sass
@@ -11,7 +11,7 @@
   margin-bottom: 0
   &:last-child
     margin-right: 0
-  @media #{$medium}
+  @media #{$large}
     font-size: 1rem
 
 .overview__product
