--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -34,9 +34,9 @@
 
 .masthead,
 .content
-  margin-bottom: $default-margin
-  @media #{$medium}
-    margin-bottom: $default-margin * 1.5
+  margin-bottom: $default
+  @media #{$large}
+    margin-bottom: $more
 
 .content
   &.overview
