--- a/src/style/_cart.sass
+++ b/src/style/_cart.sass
@@ -1,29 +1,75 @@
+=cell
+  flex-basis: auto
+  -webkit-box-flex: 0
+  flex: 0 0 auto
+  min-height: 0px
+  min-width: 0px
+  margin-left: 0.625rem
+  margin-right: 0.625rem
+
+=cell-width($columns)
+  $width: ($columns / 12) * 100%
+  width: calc(#{$width} - 1.25rem)
+
+$margin-width: 1.25 * 16px
+$price-width: 92px + $margin-width
+$remove-width: 16px + $margin-width
+
+.cart__product-visual
+  display: none
+  @media #{$tablet}
+    display: block
+    +cell
+    +cell-width(3)
+
+.cart__name
+  +cell
+  width: calc(100% - #{$price-width} - #{$remove-width} - 1.25rem)
+  @media #{$tablet}
+    +cell-width(7)
+
+.cart__name--sidebar
+  width: calc(100% - #{$price-width} - 1.25rem)
+
+.cart__price
+  +cell
+  width: 92px
+  @media #{$tablet}
+    +cell-width(3)
+
+.cart__remove
+  +cell
+  width: 16px
+  @media #{$tablet}
+    +cell-width(2)
 .cart
-  margin-bottom: $default-margin * 1.5
-  
+  margin-bottom: $more
+
 .cart__empty
   color: $gray-600
 
 .cart__item
-  margin-bottom: $default-margin
+  margin-bottom: $default
   &:last-child
     margin-bottom: 0
 
 .cart__product-visual
   border: 1px solid $gray-200
 
-.cart__product-name,
-.cart__product-price,
-.cart__total-name,
-.cart__total-price
+.cart__name--product,
+.cart__price--product,
+.cart__name--total,
+.cart__price--total
   font-family: $nav-ff
-  font-size: $h5
-  line-height: 1.3
+  font-size: $h6
+  line-height: 1.2
+  @media #{$medium}
+    font-size: $h5
   &--sidebar
     font-size: $h6
-    line-height: 1.2
 
-.cart__product-name
+.cart__name--product
+  margin-bottom: $half
   a
     color: $qicq-dark-gray
   .color-size
@@ -31,32 +77,97 @@
   &--sidebar
     margin-bottom: 4px
 
-.cart__option-name,
-.cart__option-price
-  font-size: $h6
+.cart__name--cart-page
+  .color-size
+    font-size: 0.8em
+    @media #{$medium}
+      display: none
+
+.cart__name--option,
+.cart__price--option
+  font-family: $subnav-ff
+  font-size: $h8
+  line-height: 1.2
+  margin-bottom: $half
+  @media #{$medium}
+    font-size: $h6
   &--sidebar
     font-size: $h7
 
-.cart__option-name
-  font-family: $body-ff
-
-.cart__option-price
-  font-family: $subnav-ff
-
 .cart__remove
-  font-size: $h8
-  position: relative
-  top: -2px
+  .cart__price--product &,
+  .cart__price--option &
+    display: inline-block
+    float: right
+    @media #{$medium}
+      display: none
 
-.product__choices
-  font-size: $h6
-  line-height: 1.5
-  margin-bottom: $default-margin / 4
-  span
-    font-family: $body-bold-ff
+.cart__remove__icon
+  font-size: $h7
+  color: $orange
+  @media #{$medium}
+    display: none
 
-.cart__total-name
+.cart__remove__text
+  display: none
+  @media #{$medium}
+    display: inline
+    font-size: $h8
+    position: relative
+    top: -2px
+
+.cart__product-choices
+  display: none
+  @media #{$medium}
+    display: block
+    font-family: $subnav-ff
+    font-size: $h6
+    line-height: 1.5
+    margin-bottom: $quarter
+    span
+      font-family: $nav-ff
+
+.cart__name--total
   text-transform: uppercase
 
 .cart__button-next
   float: right
+
+.cart-closed
+  display: none
+
+.cart-open
+  display: block
+
+.cart__header--sidebar
+  i
+    display: none  
+
+@media #{$small-only}
+
+  .cart--sidebar
+    position: fixed
+    left: 0
+    bottom: 0
+    width: 100%
+    padding: 0 10px
+    z-index: 9999
+    margin-top: 0
+    margin-bottom: 0
+    border-radius: 0
+    border: none
+    background-color: transparent
+
+  .cart__header--sidebar
+    border-radius: $border-radius $border-radius 0 0
+
+  .cart__contents--sidebar
+  .cart__empty--sidebar
+    background-color: $white
+
+  .cart__header--sidebar
+    i
+      display: inline-block
+      float: right
+      position: relative
+      top: -2px
