--- a/src/style/_margins.sass
+++ b/src/style/_margins.sass
@@ -5,4 +5,6 @@ $half: $default / 2
 $double: $default * 2
 $quarter: $default / 4
 $more: round($default * 1.5)
+$even-more: round($default * 1.75)
 $less: round($default / 1.5)
+$even-less: round($default / 1.75)
