--- a/src/style/_order-steps.sass
+++ b/src/style/_order-steps.sass
@@ -1,19 +1,22 @@
 .order-step__header
-  // width: 91.66667%
   color: $blue
   font-size: $h3
-  line-height: 1
-  margin-bottom: $default-margin * 1.5
+  line-height: 1.1
   padding-bottom: $default-margin
   border-bottom: 1px solid lighten($blue, 40%)
+  margin-bottom: $default
+  @media #{$medium}
+    position: relative
+    top: -6px
+    margin-bottom: $more
 
 .order-step__number
   color: lighten($blue, 30%)
   margin-right: .25em
 
 .order-step__button
-  margin-top: $default-margin
-  margin-bottom: $default-margin * 2
+  margin-top: $default
+  // margin-bottom: $double
   .fa
     font-size: 0.8em
     margin-left: 4px
