--- a/src/style/_product.sass
+++ b/src/style/_product.sass
@@ -25,6 +25,9 @@
   line-height: 0.7
   color: $qicq-dark-gray
 
+.product__color
+  margin-bottom: $default  
+
 .button--frame-size
   padding: 0.85em 0.7em
   margin-right: $half
