--- a/src/index.ejs
+++ b/src/index.ejs
@@ -19,7 +19,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8"/>
   <title>React QicQ Webshop</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation-prototype.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation-prototype.css"> -->
+  <link rel="stylesheet" href="style/foundation.css">
   <script src="https://use.fontawesome.com/85439eeb40.js"></script>
 </head>
 <body>
