--- a/src/style/style.css
+++ b/src/style/style.css
@@ -70,7 +70,7 @@ label {
   line-height: 0.9;
   color: #272727;
   margin-bottom: 16px; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .page-title {
       text-align: left;
       font-size: 40px;
@@ -225,7 +225,7 @@ label {
 
 .button.large {
   font-size: 1rem; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .button.large {
       font-size: 1.25rem; } }
 
@@ -250,7 +250,7 @@ label {
   height: 24px;
   left: 12px;
   top: 14px; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .bm-burger-button {
       display: none; } }
 
@@ -355,20 +355,20 @@ label {
 .masthead {
   background-color: #272727;
   padding: 12px 0; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .masthead {
       padding: 20px 0; } }
 
 .masthead__logo {
   display: flex;
   justify-content: center; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .masthead__logo {
       justify-content: left; } }
   .masthead__logo .imgc {
     display: inline-block;
     width: 125px; }
-    @media (min-width: 640px) {
+    @media (min-width: 768px) {
       .masthead__logo .imgc {
         width: 175px; } }
 
@@ -431,31 +431,31 @@ label {
 
 .footer__list {
   margin-bottom: 8px; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .footer__list {
       margin-bottom: 0; } }
   .footer__list li {
     text-align: center; }
-    @media (min-width: 640px) {
+    @media (min-width: 768px) {
       .footer__list li {
         text-align: left; } }
 
 .footer__list--social {
   text-align: center; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .footer__list--social {
       text-align: left; } }
   .footer__list--social ul {
     display: inline-block;
     margin-top: 11px; }
-    @media (min-width: 640px) {
+    @media (min-width: 768px) {
       .footer__list--social ul {
         display: block;
         margin-top: 8px; } }
   .footer__list--social li {
     display: inline-block;
     width: 60px; }
-    @media (min-width: 640px) {
+    @media (min-width: 768px) {
       .footer__list--social li {
         width: 50px; } }
     @media (min-width: 1024px) {
@@ -525,7 +525,7 @@ label {
 .overview__filters {
   text-align: center;
   margin-bottom: 16px; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .overview__filters {
       text-align: left;
       margin-bottom: 24px; } }
@@ -544,7 +544,7 @@ label {
   border-radius: 5px;
   border: 1px solid #6ea8bc;
   margin-bottom: 16px; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .overview__product {
       height: 424px;
       margin-bottom: 24px; } }
@@ -581,7 +581,14 @@ label {
       min-width: 0px;
       margin-left: 0.625rem;
       margin-right: 0.625rem;
-      width: calc(25% - 1.25rem); } }
+      width: calc(25% - (0.625rem * 2)); } }
+  @media (min-width: 768px) and (min-width: 768px) {
+    .cart__product-visual {
+      margin-left: 0.9375rem;
+      margin-right: 0.9375rem; } }
+  @media (min-width: 768px) and (min-width: 768px) {
+    .cart__product-visual {
+      width: calc(25% - (0.9375rem * 2)); } }
 
 .cart__name {
   flex-basis: auto;
@@ -591,13 +598,23 @@ label {
   min-width: 0px;
   margin-left: 0.625rem;
   margin-right: 0.625rem;
-  width: calc(100% - 112px - 36px - 1.25rem); }
+  width: calc(100% - 92px - 20px - 36px - 0.625rem * 2); }
   @media (min-width: 768px) {
     .cart__name {
-      width: calc(58.3333333333% - 1.25rem); } }
+      margin-left: 0.9375rem;
+      margin-right: 0.9375rem; } }
+  @media (min-width: 768px) {
+    .cart__name {
+      width: calc(58.3333333333% - (0.625rem * 2)); } }
+  @media (min-width: 768px) and (min-width: 768px) {
+    .cart__name {
+      width: calc(58.3333333333% - (0.9375rem * 2)); } }
 
 .cart__name--sidebar {
-  width: calc(100% - 112px - 1.25rem); }
+  width: calc(100% - 92px - 20px - 0.625rem * 2); }
+  @media (min-width: 768px) {
+    .cart__name--sidebar {
+      width: calc(100% - 92px - 30px - 0.9375rem * 2); } }
 
 .cart__price {
   flex-basis: auto;
@@ -610,7 +627,18 @@ label {
   width: 92px; }
   @media (min-width: 768px) {
     .cart__price {
-      width: calc(25% - 1.25rem); } }
+      margin-left: 0.9375rem;
+      margin-right: 0.9375rem; } }
+  @media (min-width: 768px) {
+    .cart__price {
+      width: calc(25% - (0.625rem * 2)); } }
+  @media (min-width: 768px) and (min-width: 768px) {
+    .cart__price {
+      width: calc(25% - (0.9375rem * 2)); } }
+
+@media (min-width: 768px) {
+  .cart__price--sidebar {
+    width: 92px; } }
 
 .cart__remove {
   flex-basis: auto;
@@ -623,7 +651,14 @@ label {
   width: 16px; }
   @media (min-width: 768px) {
     .cart__remove {
-      width: calc(16.6666666667% - 1.25rem); } }
+      margin-left: 0.9375rem;
+      margin-right: 0.9375rem; } }
+  @media (min-width: 768px) {
+    .cart__remove {
+      width: calc(16.6666666667% - (0.625rem * 2)); } }
+  @media (min-width: 768px) and (min-width: 768px) {
+    .cart__remove {
+      width: calc(16.6666666667% - (0.9375rem * 2)); } }
 
 .cart {
   margin-bottom: 24px; }
@@ -636,7 +671,7 @@ label {
   .cart__item:last-child {
     margin-bottom: 0; }
 
-.cart__product-visual {
+.cart__product-visual img {
   border: 1px solid #e9ecef; }
 
 .cart__name--product,
@@ -646,16 +681,16 @@ label {
   font-family: "HelveticaNeue Bold Condensed", Arial, sans-serif;
   font-size: 18px;
   line-height: 1.2; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .cart__name--product,
     .cart__price--product,
     .cart__name--total,
     .cart__price--total {
       font-size: 20px; } }
-  .cart__name--product--sidebar,
-  .cart__price--product--sidebar,
-  .cart__name--total--sidebar,
-  .cart__price--total--sidebar {
+  .cart__contents--sidebar .cart__name--product, .cart__contents--sidebar
+  .cart__price--product, .cart__contents--sidebar
+  .cart__name--total, .cart__contents--sidebar
+  .cart__price--total {
     font-size: 18px; }
 
 .cart__name--product {
@@ -664,12 +699,10 @@ label {
     color: #272727; }
   .cart__name--product .color-size {
     font-family: "HelveticaNeue Condensed", Arial, sans-serif; }
-  .cart__name--product--sidebar {
-    margin-bottom: 4px; }
 
 .cart__name--cart-page .color-size {
   font-size: 0.8em; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .cart__name--cart-page .color-size {
       display: none; } }
 
@@ -679,19 +712,19 @@ label {
   font-size: 14px;
   line-height: 1.2;
   margin-bottom: 8px; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .cart__name--option,
     .cart__price--option {
       font-size: 18px; } }
-  .cart__name--option--sidebar,
-  .cart__price--option--sidebar {
+  .cart__contents--sidebar .cart__name--option, .cart__contents--sidebar
+  .cart__price--option {
     font-size: 16px; }
 
 .cart__price--product .cart__remove,
 .cart__price--option .cart__remove {
   display: inline-block;
   float: right; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .cart__price--product .cart__remove,
     .cart__price--option .cart__remove {
       display: none; } }
@@ -699,13 +732,13 @@ label {
 .cart__remove__icon {
   font-size: 16px;
   color: #fd7e14; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .cart__remove__icon {
       display: none; } }
 
 .cart__remove__text {
   display: none; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .cart__remove__text {
       display: inline;
       font-size: 14px;
@@ -714,7 +747,7 @@ label {
 
 .cart__product-choices {
   display: none; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .cart__product-choices {
       display: block;
       font-family: "HelveticaNeue Condensed", Arial, sans-serif;
@@ -739,7 +772,7 @@ label {
 .cart__header--sidebar i {
   display: none; }
 
-@media (max-width: 639px) {
+@media (max-width: 767px) {
   .cart--sidebar {
     position: fixed;
     left: 0;
@@ -754,6 +787,7 @@ label {
     background-color: transparent; }
   .cart__header--sidebar {
     border-radius: 5px 5px 0 0; }
+  .cart__contents--sidebar,
   .cart__empty--sidebar {
     background-color: #fff; }
   .cart__header--sidebar i {
@@ -791,18 +825,20 @@ label {
   padding-bottom: 16px;
   border-bottom: 1px solid #d2eaf7;
   margin-bottom: 16px; }
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     .order-step__header {
       position: relative;
-      top: -6px;
-      margin-bottom: 24px; } }
+      top: -6px; } }
 
 .order-step__number {
   color: #a7d6ef;
   margin-right: .25em; }
 
 .order-step__button {
-  margin-top: 16px; }
+  margin-top: 8px; }
+  @media (min-width: 1024px) {
+    .order-step__button {
+      margin-top: 11px; } }
   .order-step__button .fa {
     font-size: 0.8em;
     margin-left: 4px; }
@@ -835,6 +871,9 @@ label {
   font-size: 31px;
   line-height: 0.7;
   color: #272727; }
+
+.product__color {
+  margin-bottom: 16px; }
 
 .button--frame-size {
   padding: 0.85em 0.7em;
