--- a/src/style/style.css
+++ b/src/style/style.css
@@ -590,6 +590,13 @@ label {
     .cart__product-visual {
       width: calc(25% - (0.9375rem * 2)); } }
 
+@media (min-width: 768px) {
+  .cart__product-visual--thank-you-page {
+    width: calc(25% - (0.625rem * 2)); } }
+  @media (min-width: 768px) and (min-width: 768px) {
+    .cart__product-visual--thank-you-page {
+      width: calc(25% - (0.9375rem * 2)); } }
+
 .cart__name {
   flex-basis: auto;
   -webkit-box-flex: 0;
@@ -615,6 +622,15 @@ label {
   @media (min-width: 768px) {
     .cart__name--sidebar {
       width: calc(100% - 92px - 30px - 0.9375rem * 2); } }
+
+.cart__name--thank-you-page {
+  width: calc(100% - 92px - 20px - 0.625rem * 2); }
+  @media (min-width: 768px) {
+    .cart__name--thank-you-page {
+      width: calc(75% - (0.625rem * 2)); } }
+  @media (min-width: 768px) and (min-width: 768px) {
+    .cart__name--thank-you-page {
+      width: calc(75% - (0.9375rem * 2)); } }
 
 .cart__price {
   flex-basis: auto;
@@ -702,9 +718,11 @@ label {
 
 .cart__name--cart-page .color-size {
   font-size: 0.8em; }
-  @media (min-width: 768px) {
-    .cart__name--cart-page .color-size {
-      display: none; } }
+
+@media (min-width: 768px) {
+  .cart__name--cart-page .color-size,
+  .cart__name--thank-you-page .color-size {
+    display: none; } }
 
 .cart__name--option,
 .cart__price--option {
@@ -901,6 +919,18 @@ label {
   @media (min-width: 1024px) {
     .product__options-item label {
       font-size: 18px; } }
+
+@media (min-width: 768px) {
+  .thank-you__title {
+    margin-bottom: 24px; } }
+
+@media (min-width: 768px) {
+  .thank-you__customer {
+    margin-bottom: 16px; } }
+
+@media (min-width: 768px) {
+  .thank-you__order {
+    margin-bottom: 0; } }
 
 .masthead,
 .content {
