--- a/src/style/_thank-you.sass
+++ b/src/style/_thank-you.sass
@@ -1,11 +1,10 @@
 .thank-you__title
+  margin-bottom: $half
   @media #{$medium}
     margin-bottom: $more
 
 .thank-you__customer
-  @media #{$medium}
-    margin-bottom: $default
+  margin-bottom: $default
 
 .thank-you__order
-  @media #{$medium}
-    margin-bottom: 0
+  margin-bottom: 0
