--- a/src/index.ejs
+++ b/src/index.ejs
@@ -20,7 +20,7 @@
   <meta charset="utf-8"/>
   <title>React QicQ Webshop</title>
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation-prototype.css"> -->
-  <link rel="stylesheet" href="style/foundation.css">
+  <!-- <link rel="stylesheet" href="style/foundation.css"> -->
   <script src="https://use.fontawesome.com/85439eeb40.js"></script>
 </head>
 <body>
