Small edits (+ build 1.1)

--- a/src/style/_thank-you.sass
+++ b/src/style/_thank-you.sass
@@ -1,10 +1,16 @@
 .thank-you__title
   margin-bottom: $half
   @media #{$medium}
-    margin-bottom: $more
+    margin-bottom: $default
 
 .thank-you__customer
   margin-bottom: $default
+  font-family: $subnav-ff
+  font-size: $h7
+  line-height: 1.4
+  @media #{$medium}
+    margin-bottom: $more
+    font-size: $h5
 
 .thank-you__order
   margin-bottom: 0
